expenses restyled, minor restylings

--- a/style/less/expenses/expenses.less
+++ b/style/less/expenses/expenses.less
@@ -12,46 +12,59 @@
     }
 
     #expenses-list {
-        width: 80%;
-        max-width: 800px;
+        width: 90%;
         margin: 10px auto;
         border-spacing: 0;
         border-collapse: collapse;
 
         .expense-item {
-            padding: 10px 15px;
-            margin: 5px 0 0 0;
+            position: relative;
             display: inline-block;
-            width: 350px;
-            height: 200px;
-            background-color: #fcfcfc;
+            padding: 10px;
+            margin: 10px;
+
+            width: 300px;
+            background-color: #FCFCFC;
+            box-sizing: border-box;
+            .border-radius(3px);
+            border: solid 1px #ccc;
 
             &:nth-child(odd){
-                margin-right: 15px;
+                // margin-right: 15px;
             }
             .amount {
-                width: 55%;
-                font-size: 2.5em;
+                width: 75%;
                 float: left;
+                font-family: 'Raleway', sans-serif;
+                font-size: 3em;
+                font-weight: 100;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
             .category-icon{
-                float: left;
-                width: 30%;
-                height: 45%;
-                margin: -10px 0 0 0;
+                position: absolute;
+                top: -1px;
+                right: 40px;
+                height: 50px;
+                border-style: solid;
+                border-width: 20px;
+                border-color: transparent;
+                border-bottom-color: rgba(0, 0, 0, 0) !important;
             }
             .options-wrapper{
-                float: right;
-                width: 25px;
+                position: absolute;
+                top: 5px;
+                right: 5px;
+                width: 12px;
                 height: 14px;
                 overflow: hidden;
+                z-index: 100;
 
                 .arrow{
                     width: 0;
                     height: 0;
-                    border-left: 10px solid transparent;
-                    border-right: 10px solid transparent;
-                    border-top: 15px solid grey;
+                    border: solid 6px transparent;
+                    border-top: 10px solid grey;
                 }
 
                 &:hover{
@@ -62,8 +75,8 @@
                 .options{
                     width: 80px;
                     position: relative;
-                    top: 5px;
-                    left: 10px;
+                    top: -2px;
+                    left: 0;
                     border: 1px solid #cfcfcf;
                     background: #fcfcfc;
                     cursor: pointer;
@@ -78,14 +91,19 @@
             .title{
                 float: left;
                 width: 100%;
-                min-height: 3em;
-                margin: 0.25em 0;
+                height: 1.5em;
+                line-height: 1.5em;
+                margin: 1em 0 0.25em;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
             .date {
                 float: left;
                 width: 100%;
                 bottom: 0;
                 text-align: right;
+                font-size: 80%;
+                color: #777;
             }
         }
     }
