--- a/style/less/menu.less
+++ b/style/less/menu.less
@@ -26,6 +26,7 @@
 
         color: @color-menu-text;
         text-transform: uppercase;
+        font-family: 'Raleway', sans-serif;
         font-size: 14pt;
         font-weight: bold;
 
