--- a/style/less/main.less
+++ b/style/less/main.less
@@ -12,6 +12,14 @@
 
 @import '../../js/vendor/fancySelect.css';
 
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 body {
 
     margin: 0;
