--- a/style/less/expenses/expenses.less
+++ b/style/less/expenses/expenses.less
@@ -2,6 +2,10 @@
 @import 'bootstrap/mixins';
 @import 'bootstrap/variables';
 @import 'bootstrap/grid';
+#expenses-content {
+    width: auto;
+    overflow: auto;
+}
 
 #expenses-list {
     .expense-item {
@@ -30,7 +34,7 @@
             position: absolute;
             top: -1px;
             right: 40px;
-            height: 50px;
+            height: 70px;
             border-style: solid;
             border-width: 20px;
             border-color: transparent;
