header logo added

--- a/style/less/content.header.less
+++ b/style/less/content.header.less
@@ -1,5 +1,20 @@
 #content-header {
+    border-bottom: solid 1px #aaa;
 
+    .logo {
+        display: inline-block;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        margin: 0 20px;
+        line-height: 60px;
+        color: #323544;
+
+        sub {
+            font-size: .5em;
+            font-family: monospace;
+
+        }
+    }
     .button {
         margin: 10px;
         float: right;
