--- a/style/less/expenses/expenses.less
+++ b/style/less/expenses/expenses.less
@@ -32,6 +32,7 @@
             text-overflow: ellipsis;
         }
         .category-icon{
+            .fancy-title(20px, 0);
             position: absolute;
             top: -1px;
             right: 40px;
@@ -83,18 +84,20 @@
         .title{
             float: left;
             width: 100%;
-            height: 1.5em;
+            min-height: 1.5em;
             line-height: 1.5em;
             margin: 1em 0 0.25em;
             overflow: hidden;
             text-overflow: ellipsis;
+            white-space: nowrap;
         }
         .date {
             float: left;
             width: 100%;
             bottom: 0;
             text-align: right;
-            font-size: 80%;
+            font-size: 0.925em;
+            font-style: italic;
             color: #777;
         }
     }
