basic Menu View implementation

--- a/style/less/content.header.less
+++ b/style/less/content.header.less
@@ -1,5 +1,32 @@
 #content-header {
+    position: relative;
     border-bottom: solid 1px #aaa;
+
+    #menu-open-button {
+        @media (max-width: @screen-desktop) {
+            display: block;
+        }
+
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 60px;
+        height: 100%;
+        padding: 14px;
+        border: none;
+        background: none;
+        z-index: 101;
+
+        &.opened svg{
+            fill: #fff !important;
+        }
+
+        svg {
+            fill: #323544;
+            pointer-events: none;
+        }
+    }
 
     .logo {
         display: inline-block;
@@ -12,7 +39,10 @@
         sub {
             font-size: .5em;
             font-family: monospace;
+        }
 
+        @media (max-width: @screen-desktop) {
+            display: none;
         }
     }
     .button {
