--- a/style/less/expenses/expenses.new.less
+++ b/style/less/expenses/expenses.new.less
@@ -125,6 +125,7 @@
 
             .pika-label {
                 z-index: auto;
+                background: none;
             }
 
             td {
