--- a/style/less/vars/box.less
+++ b/style/less/vars/box.less
@@ -9,3 +9,8 @@
 @expense-item-category-width: 160px;
 @expense-item-title-width: 160px;
 @expense-item-date-width: 160px;
+
+// Sizes
+@screen-phone: 640px;
+@screen-tablet: 768px;
+@screen-normal: 1100px;
