--- a/style/less/layout.less
+++ b/style/less/layout.less
@@ -6,7 +6,7 @@
     height: 100%;
 }
 
-#main-menu{
+#main-menu-region{
     position: relative;
     float: left;
     width: 200px;
@@ -15,5 +15,5 @@
 
 #content-wrapper {
     height: 100%;
-    margin-left: 200px;
+    // margin-left: 200px;
 }
