--- a/style/less/content.less
+++ b/style/less/content.less
@@ -29,6 +29,16 @@
             background-color: #999;
         }
     }
+
+    .overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: rgba(0,0,0,.5);
+        z-index: 50;
+    }
 }
 
 
