css files to added as less, instead of native @import

--- a/style/less/main.less
+++ b/style/less/main.less
@@ -10,8 +10,8 @@
 @import 'menu';
 @import 'content';
 
-@import '../../js/vendor/fancySelect.css';
-@import '../../js/vendor/pikaday.css';
+@import (less) '../../js/vendor/fancySelect.css';
+@import (less) '../../js/vendor/pikaday.css';
 
 *,
 *:before,
