--- a/style/less/menu.less
+++ b/style/less/menu.less
@@ -8,7 +8,7 @@
         position: absolute;
         margin-left: -200px;
         z-index: 100;
-        transition: 300ms ease;
+        .transition(300ms ease);
 
         &.menu-closed {
             margin-left: -200px;
