--- a/style/less/expenses/expenses.less
+++ b/style/less/expenses/expenses.less
@@ -59,7 +59,7 @@
                 border-top: 10px solid grey;
             }
 
-            &:hover{
+            &.opened{
                 height: auto;
                 overflow: visible;
             }
@@ -99,6 +99,28 @@
             font-size: 0.925em;
             font-style: italic;
             color: #777;
+        }
+
+        .delete-overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            padding-top: 30px;
+            background: rgba(0, 0, 0, 0.6);
+            z-index: 50;
+            text-align: center;
+            color: #fff;
+            fill: #fff;
+            cursor: pointer;
+
+            svg {
+                display: block;
+                margin:0 auto;
+                width: 48px;
+                height: 48px;
+            }
         }
     }
 }
