added opacity to "to be deleted" expense item

--- a/style/less/expenses/expenses.less
+++ b/style/less/expenses/expenses.less
@@ -19,6 +19,9 @@
         .border-radius(3px);
         border: solid 1px #ccc;
 
+        &.delete {
+            opacity: .2;
+        }
         &:nth-child(odd){
             margin-right: 0;
         }
