Removed unnecessary scrollbar from expenses

--- a/style/less/expenses/expenses.less
+++ b/style/less/expenses/expenses.less
@@ -4,11 +4,10 @@
 @import 'bootstrap/grid';
 #expenses-content {
     width: auto;
-    overflow: auto;
 }
 
 #expenses-list {
-    margin: 0;
+    margin: 0 5px;
     .expense-item {
         .clearfix();
         min-height: 9em;
