--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,100,700);
 .button {
   position: relative;
   background-color: #323544;
@@ -1093,10 +1094,9 @@
 }
 #expenses-content {
   width: auto;
-  overflow: auto;
 }
 #expenses-list {
-  margin: 0;
+  margin: 0 5px;
 }
 #expenses-list .expense-item {
   min-height: 9em;
@@ -1119,6 +1119,9 @@
 }
 #expenses-list .expense-item:after {
   clear: both;
+}
+#expenses-list .expense-item.delete {
+  opacity: .2;
 }
 #expenses-list .expense-item:nth-child(odd) {
   margin-right: 0;
@@ -1195,7 +1198,7 @@
   border: solid 6px transparent;
   border-top: 10px solid grey;
 }
-#expenses-list .expense-item .options-wrapper:hover {
+#expenses-list .expense-item .options-wrapper.opened {
   height: auto;
   overflow: visible;
 }
@@ -1238,6 +1241,26 @@
   font-size: 0.925em;
   font-style: italic;
   color: #777;
+}
+#expenses-list .expense-item .delete-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  padding-top: 30px;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 50;
+  text-align: center;
+  color: #fff;
+  fill: #fff;
+  cursor: pointer;
+}
+#expenses-list .expense-item .delete-overlay svg {
+  display: block;
+  margin: 0 auto;
+  width: 48px;
+  height: 48px;
 }
 #categories-content #add-category-wrapper {
   clear: both;
